add description length
